--- a/res/values-blackout/styles.xml
+++ b/res/values-blackout/styles.xml
@@ -17,26 +17,8 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <style name="Theme" parent="@android:style/Theme.Material.DayNight.DarkActionBar">
-        <item name="android:colorPrimary">@color/calculator_primary_color</item>
-        <item name="android:statusBarColor">@color/calculator_primary_color_dark</item>
-        <item name="android:colorAccent">@color/calculator_accent_color</item>
-        <item name="android:windowSoftInputMode">stateAlwaysHidden</item>
-    </style>
-
-    <style name="Theme.Calculator">
-        <item name="android:windowActionBar">false</item>
-        <item name="android:windowActionModeOverlay">true</item>
-        <item name="android:windowContentOverlay">@null</item>
-        <item name="android:windowNoTitle">true</item>
-        <item name="android:layoutDirection">ltr</item>
-    </style>
-
-    <style name="Theme.Licenses">
-        <item name="android:title">@string/menu_licenses</item>
-    </style>
-
-    <style name="DisplayTextStyle" parent="@android:style/Widget.Material.Light.TextView">
+    <!-- Blackout theme -->
+    <style name="DisplayTextStyle" parent="@android:style/Widget.Material.TextView">
         <item name="android:background">@android:color/transparent</item>
         <item name="android:cursorVisible">false</item>
         <item name="android:fontFamily">sans-serif-light</item>
@@ -45,7 +27,7 @@
         <item name="android:textAlignment">viewEnd</item>
     </style>
 
-    <style name="PadButtonStyle" parent="@android:style/Widget.Material.Light.Button.Borderless">
+    <style name="PadButtonStyle" parent="@android:style/Widget.Material.Button.Borderless">
         <item name="android:layout_width">0dip</item>
         <item name="android:layout_height">0dip</item>
         <item name="android:layout_rowWeight">1</item>
@@ -61,10 +43,4 @@
         <item name="android:textAllCaps">false</item>
         <item name="android:textColor">@color/pad_button_text_color</item>
     </style>
-
-    <style name="PadLayoutStyle">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">match_parent</item>
-    </style>
-
 </resources>
