--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -17,8 +17,14 @@
 
 <resources>
 
+    <!-- Default background color for the action bar. -->
+    <color name="calculator_primary_color">#00bcd4</color>
+
     <!-- Default background color for the status bar. -->
-    <color name="calculator_accent_color">#0097A7</color>
+    <color name="calculator_primary_color_dark">#0097A7</color>
+
+    <!-- Default accent color. -->
+    <color name="calculator_accent_color">#009688</color>
 
     <!-- Color to indicate an error has occured. -->
     <color name="calculator_error_color">#C2185B</color>
@@ -42,7 +48,7 @@
     <color name="pad_operator_background_color">#636363</color>
 
     <!-- Background color for the advanced pad. -->
-    <color name="pad_advanced_background_color">#1DE9B6</color>
+    <color name="pad_advanced_background_color">@color/calculator_accent_color</color>
 
     <!-- Text color for a button in a pad. -->
     <color name="pad_button_text_color">#FFF</color>
