--- a/res/values-night/color.xml
+++ b/res/values-night/color.xml
@@ -17,7 +17,7 @@
 
 <resources>
 
-    <!-- Material theme -->
+    <!-- Night (Material) theme colors -->
     <color name="material_grey_850">#ff303030</color>
     <color name="material_grey_800">#ff424242</color>
 
