--- a/res/values-night/styles.xml
+++ b/res/values-night/styles.xml
@@ -17,7 +17,7 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- DarkKat theme -->
+    <!-- Night (Material) theme styles -->
     <style name="DisplayTextStyle" parent="@android:style/Widget.Material.TextView">
         <item name="android:background">@android:color/transparent</item>
         <item name="android:cursorVisible">false</item>
